--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -10,6 +10,13 @@
   --verde_oscuro_nav: #CFF9E1;
   --verde_claro: #d6fae5;
 }
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
@@ -20,6 +27,65 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+/* Register Page */
+.content-main {
+  background-image: linear-gradient(#a4f2c5, #f6fdf9);
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  overflow: auto;
+}
+
+.dateLabel {
+  font-size: 1.2rem;
+  color: #0a4f58;
+}
+
+.input-register {
+  border: 0;
+  width: 100%;
+  background: transparent;
+  height: 2.5rem;
+  border-bottom: 3px solid #5a842a;
+  align-self: flex-end;
+}
+
+.input-register:focus {
+  outline: none;
+}
+
+.input-register::placeholder {
+  font-size: 1.2rem;
+  color: #0a4f58;
+}
+
+input[type="checkbox"] {
+  cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: 0;
+  background: transparent;
+  height: 16px;
+  width: 16px;
+  border: 2px solid black;
+}
+
+input[type="checkbox"]:checked {
+  background: #5f8933;
+}
+
+input[type="checkbox"]:hover {
+  filter: brightness(90%);
+}
+
+.logo-register {
+  width: 350px;
+  height: 120px;
+}
+/* End Register Page */
 
 /* START SCROLLBAR */
 
@@ -36,13 +102,13 @@ code {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: var(--verde-claro);
+  background: var(--verde_categoria);
   border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--verde-oscuro);
+  background: var(--celeste_categoria);
 }
 
 /* END SCROLLBAR*/
@@ -351,6 +417,37 @@ code {
   background: linear-gradient(to left, var(--verde_oscuro), var(--verde_claro));
   border-radius: 10px;
 }
+
+.btn_register {
+  width: 25rem;
+  height: 3.5rem;
+  border-radius: 20px;
+  background: white;
+  font-size: 1.2rem;
+  color: #5f8933;
+  font-weight: bold;
+  transition: box-shadow .8s;
+  text-decoration: none;
+  border: 2px solid #0a4f58;
+}
+
+.btn_register:hover {
+  color: #0a4f58;
+  box-shadow: 5px 10px #888888;
+}
+
+@media only screen and (max-width: 768px) {
+  .btn_register {
+    width: 12rem;
+    height: 3rem;
+  }
+
+  .logo-register {
+    width: 14.5rem;
+    height: 5rem;
+  }
+}
+
 .fondo_nav{
   background: linear-gradient(to top, var(--verde_oscuro_nav), var(--verde_claro));
 
