--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -20,13 +20,16 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 /* Register Page */
@@ -213,7 +216,11 @@ input[type="checkbox"]:hover {
   color: #000;
   align-items: center;
   background: var(--azul-claro);
-  background: -webkit-linear-gradient(to left, var(--azul-claro), var(--azul-claro));
+  background: -webkit-linear-gradient(
+    to left,
+    var(--azul-claro),
+    var(--azul-claro)
+  );
   background: linear-gradient(to left, var(--azul-claro), var(--azul-oscuro));
   width: 30%;
   font-size: 14px;
@@ -416,7 +423,12 @@ input[type="checkbox"]:hover {
 
 .btn_iniciar {
   background: rgb(206, 248, 224);
-  background: linear-gradient(90deg, rgba(206, 248, 224, 1) 0%, rgba(163, 239, 196, 1) 79%, rgba(99, 193, 138, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(206, 248, 224, 1) 0%,
+    rgba(163, 239, 196, 1) 79%,
+    rgba(99, 193, 138, 1) 100%
+  );
   border-radius: 10px;
   border-left: none;
 }
@@ -426,7 +438,11 @@ input[type="checkbox"]:hover {
 }
 .fondo_nav {
   background: rgb(254, 255, 254);
-  background: linear-gradient(180deg, rgba(254, 255, 254, 1) 0%, rgba(204, 249, 223, 1) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(254, 255, 254, 1) 0%,
+    rgba(204, 249, 223, 1) 100%
+  );
 }
 .main-container__carrito {
   flex-wrap: wrap;
@@ -482,14 +498,14 @@ input[type="checkbox"]:hover {
   width: 100%;
 }
 .input-cantidad {
-  background-color: #A4F2C5;
+  background-color: #a4f2c5;
   height: 30px;
   border: transparent;
   border-radius: 20px;
   text-align: right;
 }
 .input-cantidad:focus {
-  background-color: #A4F2C5;
+  background-color: #a4f2c5;
 }
 .menu-list ul {
   list-style-type: none;
@@ -559,7 +575,26 @@ input[type="checkbox"]:hover {
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  background-image: radial-gradient(circle at 50% -20.71%, #ffffa1 0, #f5ffa0 6.25%, #e4ffa0 12.5%, #d2ffa1 18.75%, #bdffa3 25%, #a7fda6 31.25%, #8cfaaa 37.5%, #6cf7af 43.75%, #3cf2b5 50%, #00edbc 56.25%, #00e8c6 62.5%, #00e4d0 68.75%, #00dfdc 75%, #00dbe9 81.25%, #00d7f5 87.5%, #00d3ff 93.75%, #00d0ff 100%);
+  background-image: radial-gradient(
+    circle at 50% -20.71%,
+    #ffffa1 0,
+    #f5ffa0 6.25%,
+    #e4ffa0 12.5%,
+    #d2ffa1 18.75%,
+    #bdffa3 25%,
+    #a7fda6 31.25%,
+    #8cfaaa 37.5%,
+    #6cf7af 43.75%,
+    #3cf2b5 50%,
+    #00edbc 56.25%,
+    #00e8c6 62.5%,
+    #00e4d0 68.75%,
+    #00dfdc 75%,
+    #00dbe9 81.25%,
+    #00d7f5 87.5%,
+    #00d3ff 93.75%,
+    #00d0ff 100%
+  );
 }
 .icon-dash {
   font-size: 20px;
@@ -598,7 +633,11 @@ input[type="checkbox"]:hover {
 }
 
 .fondo_nav {
-  background: linear-gradient(to top, var(--verde_oscuro_nav), var(--verde_claro));
+  background: linear-gradient(
+    to top,
+    var(--verde_oscuro_nav),
+    var(--verde_claro)
+  );
 }
 
 .section_cards-dash {
@@ -622,6 +661,12 @@ input[type="checkbox"]:hover {
 .carrito_button a {
   font-size: 50px;
 }
+.container-manejo{
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
 .search-input {
   border-radius: 20px;
   background: #a4f2c5;
@@ -635,20 +680,68 @@ input[type="checkbox"]:hover {
   color: #fff;
   margin-left: 10px;
 }
+.search {
+  position: relative;
+  box-shadow: 0 0 40px rgba(51, 51, 51, 0.1);
+}
+
+.search input {
+  height: 60px;
+  text-indent: 25px;
+  border: 2px solid #d6d4d4;
+}
+.container-search{
+  position: absolute;
+  right: 0;
+}
+.search input:focus {
+  box-shadow: none;
+  border: 2px solid transparent;
+}
+
+.search .fa-search {
+  position: absolute;
+  top: 20px;
+  left: 16px;
+}
+
+.search button {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  height: 50px;
+  width: 110px;
+  background-color: var(--verde_oscuro);
+  border: transparent;
+}
+
+.search button:hover {
+  color: #fff;
+  background-color: var(--celeste_categoria);
+  border-color: transparent;
+}
+
+/*Estilos del producto para el Administrador*/
+
+.container-buscador__productos{
+  margin-top: 50px;
+  padding-right: 180px;
+}
+
 @media only screen and (max-width: 1198px) {
-  .principal__section{
+  .principal__section {
     width: 80%;
   }
   .carrito-producto__datos {
-  display: flex;
-  flex-direction: column;
-  align-self: flex-start;
-  width: 100%;
-}
-.carrito-producto__imagen {
-  height: 200px;
-  width: 100%;
-}
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    width: 100%;
+  }
+  .carrito-producto__imagen {
+    height: 200px;
+    width: 100%;
+  }
 }
 @media only screen and (max-width: 768px) {
   .menu-list {
@@ -656,16 +749,16 @@ input[type="checkbox"]:hover {
     padding: 0;
   }
   .carrito-producto__datos {
-  display: flex;
-  flex-direction: column;
-  align-self: flex-start;
-  width: 100%;
-}
-.carrito-producto__imagen {
-  height: 200px;
-  width: 100%;
-}
-  .principal__section{
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    width: 100%;
+  }
+  .carrito-producto__imagen {
+    height: 200px;
+    width: 100%;
+  }
+  .principal__section {
     width: 100%;
   }
   .menu-list ul {
